--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@remix-run/router": "^1.7.1",
     "autoprefixer": "10.4.14",
     "next": "13.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
     "tailwindcss": "3.3.2"
   }
 }
